force-app/main/default/objects/NCMT_CustomSettings__c/NCMT_CustomSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NCMT_CustomSettings</label>
</CustomObject>