force-app/main/default/objects/NCMT_CustomSettings__c/fields/Cost_Parameter_Date__c.field-meta.xml
<CustomField>
    <fullName>Cost_Parameter_Date__c</fullName>
    <label>Cost Parameter Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>