force-app/main/default/objects/NCMT_CustomSettings__c/fields/Data_Load_Previous_FY__c.field-meta.xml
<CustomField>
    <fullName>Data_Load_Previous_FY__c</fullName>
    <description>Previous Fiscal Year</description>
    <label>Data Load Previous FY</label>
    <length>4</length>
    <type>Text</type>
</CustomField>