force-app/main/default/objects/NCMT_CustomSettings__c/fields/Professional_Service_Cost_Parameter_Date__c.field-meta.xml
<CustomField>
    <fullName>Professional_Service_Cost_Parameter_Date__c</fullName>
    <description>Professional Service Cost Parameter Date</description>
    <label>Professional Service Cost Parameter Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>